Fix gap for rows

--- a/site/gatsby-site/src/tailwind.css
+++ b/site/gatsby-site/src/tailwind.css
@@ -94,6 +94,14 @@
         @apply tw-flex tw-flex-wrap;
     }
 
+    .tw-row.tw-row-gap-2 .tw-col:first-child {
+        @apply lg:tw-ml-0;
+    }
+
+    .tw-row.tw-row-gap-2 .tw-col {
+        @apply lg:tw-ml-2;
+    }
+
     .tw-row>* {
         @apply tw-w-full;
     }
